force-app/main/default/objects/Onboarding_Document_Type__c/Onboarding_Document_Type__c.object-meta.xml
<CustomObject>
    <label>Onboarding Document Type</label>
    <nameField>
        <label>Document Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Document Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>