force-app/main/default/objects/Onboarding_Document_Type__c/fields/Instructions_for_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Instructions_for_Submitter__c</fullName>
    <label>Instructions for Submitter</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>