force-app/main/default/objects/Onboarding_Document_Type__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <label>Is Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>